syntax = "proto3";

package scuffle.types;

message StreamVariants {
  // A variant is a transcoded version of the stream.
  // A stream variant is unique by its name and group.
  message StreamVariant {
    // The name of the variant.
    string name = 1;

    // Group the variant belongs to.
    string group = 2;

    // The transcode states of the variant.
    repeated string transcode_state_ids = 3;
  }

  // A state that the transcoder should transcode to.
  // A transcode state is unique by its id.
  message TranscodeState {
    // The id of the variant.
    string id = 1;

    message VideoSettings {
      // The width of the video.
      uint32 width = 1;
      // The height of the video.
      uint32 height = 2;
      // The framerate of the video.
      uint32 framerate = 3;
    }

    message AudioSettings {
      // The sample rate of the audio.
      uint32 sample_rate = 1;
      // The number of channels of the audio.
      uint32 channels = 2;
    }

    // The settings for the transcode state (video or audio).
    oneof settings {
      VideoSettings video = 2;
      AudioSettings audio = 3;
    }

    // The bitrate of the video.
    uint32 bitrate = 4;

    // The codec of the video.
    string codec = 5;

    // Copy the stream directly from the source.
    bool copy = 6;
  }

  repeated StreamVariant stream_variants = 1;
  repeated TranscodeState transcode_states = 2;
}
